# awsv4-cpp

./: .gitignore  CMakeLists.txt  Makefile  SAMPLE_OUTPUT  awsv4.cc  awsv4.cpp  awsv4.h  awsv4.hpp  main.cc  main.cpp  tokenizer.cc  url.cc  url.h
